fix overflow and add intelligent choosing

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body, html, main {
     width: 100%;
     height: 100%;
     position: relative;
+    overflow: hidden;
 }
 body {
     display: flex;
